--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@ body {
 .card-container.flipped .card-after {
 transform: rotateY(0deg);
 }
-.controls-container {
+.pantalla-principal {
     position: absolute;
     display: flex;
     align-items: center;
@@ -88,14 +88,25 @@ button {
     background-color: #000000;
     color: #ffffff;
   }
-  .controls-container button {
+  .pantalla-principal button {
     font-size: 1.3em;
     box-shadow: 0 0.6em 2em rgba(86, 66, 0, 0.2);
+  }
+  .pantalla-final{
+    top: 50%;
+    left:50%;
+    transform: translateY(100%);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    top: 0;
   }
   .hide {
     display: none;
   }
   #result {
+    
     text-align: center;
   }
   #result h2 {
