--- a/style.css
+++ b/style.css
@@ -80,6 +80,7 @@ button {
     border-radius: 0.3em;
     padding: 1em 1.5em;
     cursor: pointer;
+    font-size: 1.1em;
 }
 #stop {
     font-size: 1.1em;
